policies/allow-nginx-ingress.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-nginx-ingress
  namespace: advanced-policy-demo
spec:
  selector: app == 'nginx'
  types:
    - Ingress
  ingress:
    - action: Allow
      source:
        selector: run == 'access'
